fix: :lipstick: fixes for color contrast in project card

--- a/src/components/ProjectCard/index.module.css
+++ b/src/components/ProjectCard/index.module.css
@@ -19,13 +19,14 @@
 .card-header img {
   object-fit: contain;
   border-radius: 12px;
-
 }
 .description {
   padding: 24px;
   border-radius: 16px;
   border: 3px solid rgba(255, 255, 255, 0.77);
-  background: rgba(255, 255, 255, 0.13);
+  background: rgba(40, 44, 51, 0.13);
+  /* background-color: rgba(0, 0, 0, 0.13); */
+  /* background-color: #282c33; */
   backdrop-filter: blur(24px);
   transition: all 0.3s;
   position: absolute;
@@ -37,6 +38,10 @@
 }
 .description.active {
   display: block;
+}
+
+.description a {
+  font-size: 14px;
 }
 
 @media screen and (max-width: 1200px) {
